documentando api, fazendo paginas de login registro e recuperação de senha, iniciando implementação de assinatura

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -129,3 +129,14 @@ body {
 	background-repeat: no-repeat;
 	background-size: cover;
 }
+
+.btn-disable {
+	background-color: var(--color-primary);
+}
+
+.btn-primary {
+	background-color: var(--color-primary);
+	&:hover {
+		background-color: var(--color-primary-dark);
+	}
+}
